Fix annotations overflow issue

--- a/src/components/AnnotationTabs/AnnotationTabs.styl
+++ b/src/components/AnnotationTabs/AnnotationTabs.styl
@@ -2,11 +2,22 @@
   height 44px
   width 100%
   display flex
+  display grid
   z-index 1000
   position sticky
+  grid-template-columns 44px 1fr 44px
   top var(--sticky-items-offset)
   background-color var(--main-bg-color)
   border-bottom 1px solid rgba(0, 0, 0, 0.1)
+
+  &_viewAll
+    grid-template-columns 44px 1fr
+
+  &_addNew
+    grid-template-columns 1fr 44px
+
+  &_viewAll&_addNew
+    grid-template-columns 44px 1fr 44px
 
   &__add,
   &__all
@@ -30,6 +41,17 @@
     &_active
       color $accent_color
 
+  &__list
+    flex 1
+    display flex
+    overflow auto
+    position relative
+    -ms-overflow-style none
+    scrollbar-width none
+
+    &::-webkit-scrollbar
+      display none
+
 .entity-tab
   height 100%
   min-width 170px
@@ -43,8 +65,10 @@
     border-right 1px solid rgba(#000, 0.1)
 
   &_selected
+    opacity 1
     cursor default
-    background-color #fff
+    background-color var(--main-bg-color)
+    box-shadow inset 0 2px 0 $accent_color
 
   &__userpic
     width 24px
